support/manifests/istio/gateway-https.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: always-open-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "bealwaysopen.com"
    - "*.bealwaysopen.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: always-open-tls
    hosts:
    - "bealwaysopen.com"
    - "*.bealwaysopen.com"
