support/manifests/istio/ingress-accesslog.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingressgateway-debug-accesslog
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
    patch:
      operation: MERGE
      value:
        name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
              log_format:
                json_format:
                  ts: "%START_TIME%"
                  method: "%REQ(:METHOD)%"
                  path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  status: "%RESPONSE_CODE%"
                  route: "%ROUTE_NAME%"
                  upstream_cluster: "%UPSTREAM_CLUSTER%"
                  downstream: "%DOWNSTREAM_REMOTE_ADDRESS%"
                  request_id: "%REQ(X-REQUEST-ID)%"
                  proto: "%PROTOCOL%"
                  headers:
                    upgrade: "%REQ(UPGRADE)%"
                    connection: "%REQ(CONNECTION)%"
                    sec_websocket_key: "%REQ(SEC-WEBSOCKET-KEY)%"
                    sec_websocket_version: "%REQ(SEC-WEBSOCKET-VERSION)%"
                    sec_websocket_extensions: "%REQ(SEC-WEBSOCKET-EXTENSIONS)%"
                    x_forwarded_proto: "%REQ(X-FORWARDED-PROTO)%"
                    x_forwarded_port: "%REQ(X-FORWARDED-PORT)%"
                  user_agent: "%REQ(USER-AGENT)%"
                  authority: "%REQ(:AUTHORITY)%"
